--- a/frontend/style.css
+++ b/frontend/style.css
@@ -2,7 +2,7 @@
     background-color: grey;
     overflow: hidden;
   }
-  
+   /* navigation bar links */
   .topnav a {
     float: left;
     color: #f2f2f2;
@@ -12,7 +12,7 @@
     font-size: 17px;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   }
-  
+  /* navigation bar on hover */
   .topnav a:hover {
     background-color: #ddd;
     color: black;
@@ -22,15 +22,17 @@
     background-color: #04AA6D;
     color: white;
   }
-
+ /* labels reg-form, log-form */
 .reg-form label, .log-form label{
   display: inline-block;
   width: 100px;
   margin-bottom: 8px;
 }
+ /* h2 reg-form, log-form */
 .reg-form h2, .log-form h2 {
   text-align: center;
 }
+ /* input reg-form, log-form */
 .reg-form input, .log-form input {
   display: inline-block;
   width: calc(100% - 110px);
@@ -40,6 +42,7 @@
   border-radius: 5px;
   box-sizing: border-box;
 }
+/* center the buttons*/
 .reg-form input[name="register"], .log-form input[name="login"] {
   display: block;
   margin: 0 auto;
