Started Wish List
- Added wish list button to nav bar
- created wishlist.html
- created createNewList.html
- created submit-list.php (incomplete)
- added to style.css for wishlist classes

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -23,6 +23,55 @@
     background-color: #04AA6D;
     color: white;
   }
+  
+  .topnav-right {
+	  float: right;
+  }
+  
+  .create-list-button {
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
+	  
+	  .form-group {
+        margin-bottom: 20px;
+      }
+
+      .form-group label {
+        display: block;
+        font-weight: bold;
+      }
+
+      .form-group input[type="text"], .form-group select {
+        width: 100%;
+        padding: 10px;
+        margin-top: 5px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+      }
+
+      .submit-button {
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 4px;
+      }
  /* labels reg-form, log-form */
 .reg-form label, .log-form label{
   display: inline-block;
